# proskiro-tools

./: .gitignore  README.md  pyproject.toml
proskiro_tools/: __init__.py
proskiro_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
proskiro_tools/data/: __init__.py  profession.py
proskiro_tools/db/: connection.py
proskiro_tools/models/: __init__.py  profession.py  skills.py
tests/: conftest.py  test_profession.py
